# niubengit

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/hzyc/niuben/forslm_opencv/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hzyc/niuben/forslm_opencv/: HistUtils.java  MainActivity.java  OpenCVHelper.java
app/src/main/jni/: MyLib.cpp  com_hzyc_niuben_forslm_opencv_OpenCVHelper.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/hzyc/niuben/forslm_opencv/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
